# fast-image-viewer

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  AGENTS.md  README.md  app.Dockerfile  app2.Dockerfile  docker-compose.yml  web.Dockerfile
backend/: .env.example  .gitignore  README.md  env.py  log.py  main.py  manage.py  pyproject.toml  test.http
backend/api/: dataset.py  models.py  renderers.py  serializers.py  urls.py  views.py
backend/api/management/commands/: scan_dataset.py
backend/api/migrations/: 0001_initial.py
backend/fast_image_viewer/: asgi.py  settings.py  urls.py  wsgi.py
backend2/: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  env.py  log.py  main.py  pyproject.toml  test.http
backend2/alembic/: env.py  script.py.mako
backend2/alembic/versions/: 0001_initial.py
backend2/app/: db.py  deps.py  main.py  models.py  pagination.py  query.py  schemas.py
backend2/app/routers/: folders.py  images.py
backend2/app/services/: dataset.py  paths.py
backend2/cli/: scan_dataset.py
backend2/specs/: api.md  database.md  dataset.md  project.md
backend2/tasks/: api.md  database.md  dataset.md  docs.md  project.md
frontend/: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.vue  main.ts  style.css  types.ts  util.ts  vite-env.d.ts
frontend/src/components/: AngleLeftIcon.vue  AngleRightIcon.vue  FolderIcon.vue  FolderMenuItem.vue  FolderOpenIcon.vue  ImageViewer.vue  Pagination.vue  UndoIcon.vue
frontend/src/pages/: LoginPage.vue  MainPage.vue  RegisterPage.vue
frontend/src/router/: index.ts
nginx/: README.md
nginx/conf.d/: app.conf  default.conf
specs/: login.md
tasks/: login.md
