[project]
name = "fast-image-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "h5py>=3.16.0",
    "markdown>=3.10.2",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ruff>=0.15.15",
]
